<resources>

    //Database References
    <string name="database_needy_parent_reference">Needy</string>
    <string name="database_users_parent_reference">Users</string>
    <string name="database_volunteer_parent_reference">Volunteer</string>
    <string name="database_uploads_parent_reference">uploads</string>
    <string name="database_admin_parent_reference">Admin</string>

    //Storage References
    <string name="storage_needy_certificates_reference">NeedyCertificates</string>
    <string name="storage_dp_reference">dp</string>
    <string name="storage_uploads_reference">uploads</string>

    <string-array name="india_states">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>

    <string name="app_name">Scribe Finder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_hint">  Email</string>
    <string name="password">Password</string>
    <string name="password_hint">  Password</string>
    <string name="forget_password">Forgot Password</string>
    <string name="new_user_register">New User? Register Here.</string>
    <string name="login">Login</string>
    <string name="i_am_needy">I am Needy/Visually Impaired</string>
    <string name="i_am_volunteer">I am Volunteer</string>
    <string name="app_theme_text">They have the WILL, will you help them pave the WAY?</string>
    <string name="title_activity_login">Sign in</string>
    <string name="contact_us">Contact Us</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="if_already_registered_sign_in">If already Registered, Sign In</string>
    <string name="reset_password">Reset Password</string>
    <string name="languages_known_to_write">Languages known to write</string>
    <string name="english">English</string>
    <string name="telugu">Telugu</string>
    <string name="kannada">Kannada</string>
    <string name="hindi">Hindi</string>
    <string name="tamil">Tamil</string>
    <string name="select_state">Select State</string>
    <string name="select_dist">Select District</string>
    <string name="select_cit">Select City</string>
    <string name="title_activity_needy_main_page">NeedyMainPage</string>
    <string name="action_settings">Settings</string>
    <string name="address">Address</string>
    <string name="pin_code">Pin code</string>
    <string name="city">City</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Re-type New Password</string>
    <string name="change">Change</string>
    <string name="search">Search</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth(DD/MM/YYYY)</string>
    <string name="dob">DOB</string>
    <string name="we_just_emailed_you_a_link">We Just emailed you a link</string>
    <string name="please_check_your_email_and_click_the_secure_link">Please check your email and click the secure link.</string>
    <string name="cancel">Cancel</string>
    <string name="resend_link">Resend Link</string>
    <string name="if_you_don_t_see_our_email_check_your_spam_folder">If you don\'t see our email, check your spam folder.</string>
    <string name="preferred_language">Preferred Language</string>
    <string name="password_change_note">Once the password is successfully changed, you will need to login again</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="asterisk_symbol">*</string>
    <string name="image_not_available">Back</string>
    <string name="request">Request</string>
    <string name="volunteers_found">Volunteers Found</string>
    <string name="search_for_scribe">Search for Scribe</string>
    <string name="forgot_password_message">Enter your Email Address which is registered with us and we will send your credentials to your Email Address.</string>
    <string name="send_email">Send Email</string>
    <string name="type_of_user">Type of User</string>
    <string name="update">Update</string>
    <string name="you_cannot_edit_email_address">You cannot Edit Email Address..!</string>
    <string name="select_city">Select City</string>
    <string name="volunteer">Volunteer</string>
    <string name="new_user">New User</string>
    <string name="ba_1st_sem">BA 1st Sem</string>
    <string name="ba_1st_sem_economics">BA 1st Sem Economics</string>
    <string name="ba_2nd_sem">BA 2nd Sem</string>
    <string name="ba_3rd_sem">BA 3rd Sem</string>
    <string name="ba_4th_sem">BA 4th Sem</string>
    <string name="ba_5th_sem">BA 5th Sem</string>
    <string name="ba_6th_sem">BA 6th Sem</string>
    <string name="study_material">Study Material</string>
    <string name="ba_notes">BA Notes</string>
    <string name="upload_notes">Upload Notes</string>
    <string name="view_uploads">View Uploads</string>
    <string name="upload">Upload</string>
    <string name="notes">Notes</string>
    <string name="view">View</string>
    <string name="uploads">Uploads</string>
    <string name="needy_count">Total Needies Registered</string>
    <string name="uploaded_notes">Uploaded Notes</string>
    <string name="choose_file">Choose File</string>
    <string name="menu_refresh">Menu Refresh</string>
    <string name="upload_notes_warning_message">Please upload notes with proper subject name as file name. </string>
    <string name="error_invalid_email">Invalid credentials</string>
    <string name="error_user_does_not_exists">User does not Exist</string>
    <string name="file_not_selected">No File Selected</string>
    <string name="Intro">Intro</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Got It</string>
    <string name="slide_1_title">Volunteer</string>
    <string name="slide_1_desc">Volunteers are the one who is interested in writing exams for the Visually impaired students</string>
    <string name="slide_2_title">Needy</string>
    <string name="slide_2_desc"> NEEDY is the one who are searching for volunteers</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_instructions">Instructions</string>
    <string name="like_us_on_facebook">Like us on Facebook</string>
    <string name="internet_not_found_error_message">We could not establish a connection with our servers. Please try again when you are connected to the internet</string>
    <string name="scribe_finder_logo">Scribe Finder Logo</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="send">Send</string>
    <string name="back_button">Back</string>
    <string name="suggestions">Suggestions</string>
    <string name="queries">Queries</string>
    <string name="suggestions_text">Please enter your Suggestions here, we will take action at the earliest.</string>
    <string name="queries_text">Please enter your queries here, we will get back to you at the earliest.</string>
    <string name="submit">Submit</string>
    <string name="default_email_address">scribefinder.info@gmail.com</string>
    <string name="needy">Needy</string>
    <string name="volunteer_count">Total Volunteers Registered</string>
    <string name="or">(or)</string>
    <string name="make_zip_file">Make a zip file of all the notes and send it to scribefinder.info@gmail.com</string>
    <string name="this_is_the_list_of_notes_uploaded_by_all_the_users">This is the complete list of notes uploaded by all the users.</string>
    <string name="introduction">Introduction</string>
    <string name="app_reason">App to find volunteers for writing exams to the visually impaired students.</string>
    <string name="volunteer_reason">Register as volunteer for helping visually impaired students to write their exams.</string>
    <string name="needy_reason">Register as needy if you are visually impaired student.</string>
    <string name="study_materials_">Access to the study materials at one place</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_for_the_volunteers">Instructions for the Volunteers</string>
    <string name="needy_registration">Needy Registration</string>
    <string name="volunteer_registration">Volunteer Registration</string>
    <string name="details_of">Details of </string>
    <string name="upload_certificate">Upload Certificate</string>
    <string name="upload_and_register">Upload and Register</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="open_mail">Open Mail</string>
    <string name="verification_mail_message">Verification mail has sent to ur Email id, Please verify to login</string>
    <string name="certificate_validation_message">Note : Certificate verification process has been initiated and it will take maximum 30 minutes to complete. You are not allowed to search for the volunteers until the verification process completes.</string>
    <string name="certificate_reason">Please upload your Physical handicap certificate or Visually Impaired certificate for verification purpose.</string>
    <string name="skip_and_register">Skip and Register</string>
    <string name="skip_registration_message">You can skip uploading certificate and continue for registration but you will be not allowed to search for volunteers untill you upload certificate.</string>
</resources>