<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none"
        android:id="@+id/upmenu">

        <item
            android:id="@+id/needyeditProfile"
            android:title="@string/edit_profile"/>
        <item
            android:id="@+id/needychangePassword"
            android:title="@string/change_password"/>

        <item
            android:id="@+id/needydeleteAccount"
            android:title="@string/delete_account"/>
    </group>

    <group android:checkableBehavior="none"
        android:id="@+id/bottomMenu">

        <item
            android:id="@+id/like_us_on_facebook"
            android:title="@string/like_us_on_facebook" />

        <item
            android:id="@+id/contactUs"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/needylogout"
            android:title="@string/logout" />
    </group>

</menu>
