<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:id="@+id/topMenu">

        <item
            android:id="@+id/volunteereditProfile"
            android:title="@string/edit_profile" />

        <item
            android:id="@+id/volunteerchangePassword"
            android:title="@string/change_password" />



        <item
            android:id="@+id/volunteerdeleteAccount"
            android:title="@string/delete_account"/>
    </group>

<group android:checkableBehavior="none"
    android:id="@+id/bottomMenu">


        <item
            android:id="@+id/like_us_on_facebook"

            android:title="Like us on facebook" />

    <item
        android:id="@+id/about_us"

        android:title="About us" />

    <item
        android:id="@+id/volunteerlogout"
        android:title="@string/logout" />
    </group>
</menu>
