<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".RegisterSuccessfulMessage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_just_emailed_you_a_link"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="70dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_check_your_email_and_click_the_secure_link"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:background="@color/button_background_color" />

        <Button
            android:id="@+id/btnResendLink"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/resend_link"
            android:background="@color/button_background_color"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/if_you_don_t_see_our_email_check_your_spam_folder"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"/>

</LinearLayout>