<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Volunteer.VolunteerProfileEdit">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/needyProfileEditToolbar"
        android:background="@color/toolbarColor">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_action_arrow_left"
            android:contentDescription="@string/image_not_available"
            android:onClick="goBackToPreviousActivity"/>

        <TextView
            android:id="@+id/toolbarNeedyProfileEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/edit_profile"
            android:layout_marginStart="40dp"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/name"
                    android:nextFocusUp="@id/etName"
                    android:nextFocusLeft="@id/etName"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/you_cannot_edit_email_address">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:enabled="false"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etMobileNumberLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/etMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/mobileNumber"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/gender_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:layout_marginStart="5dp"
                    android:textSize="20sp"
                    android:layout_marginLeft="5dp" />

                <RadioGroup
                    android:id="@+id/genderGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/gender_textview"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp">

                    <RadioButton
                        android:id="@+id/male_radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:paddingLeft="5dp"
                        android:paddingStart="5dp" />

                    <RadioButton
                        android:id="@+id/female_radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/female"
                        android:paddingStart="5dp" />

                </RadioGroup>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/button_background_color"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/btnDatePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@color/button_background_color"
                    android:text="@string/dob"

                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etDOBLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etDOB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/date_of_birth"
                        android:inputType="date"
                        />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etAddressLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/address"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etPincodeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/etPincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/pincode"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tStateSpinnerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_state"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/StateSpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:popupBackground="@drawable/gradient"
                    android:drawSelectorOnTop="true"
                    android:layout_gravity="center"
                    android:gravity="center" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tDistrictSpinnerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tDistrict"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_dist"

                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/DistrictSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:popupBackground="@drawable/gradient"
                    android:drawSelectorOnTop="true"
                    android:layout_gravity="center"
                    android:spinnerMode="dropdown"
                    android:gravity="center"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tcitySpinnerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tcity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_city"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/CitySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:popupBackground="@drawable/gradient"
                    android:drawSelectorOnTop="true"
                    android:spinnerMode="dropdown"
                    android:layout_gravity="center"
                    android:gravity="center"/>

            </android.support.design.widget.TextInputLayout>


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/button_background_color"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tvLanguagesKnown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/languages_known_to_write"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/chEnglish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/english"
                android:onClick="onCheckboxClicked"/>

            <CheckBox
                android:id="@+id/chKannada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/kannada"
                android:onClick="onCheckboxClicked"/>

            <CheckBox
                android:id="@+id/chTelugu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/telugu"
                android:onClick="onCheckboxClicked"/>


            <CheckBox
                android:id="@+id/chHindi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/hindi"
                android:onClick="onCheckboxClicked"/>

            <CheckBox
                android:id="@+id/chTamil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/tamil"
                android:onClick="onCheckboxClicked"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/button_background_color"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btnEdit"
                android:layout_marginTop="35dp"
                android:text="@string/update"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/buttonshape"
                android:layout_marginBottom="30dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
